--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "npm run vite:build && npm run electron:build"
   },
   "dependencies": {
+    "gsap": "^3.12.4",
     "pinia": "^2.1.7",
     "pixi-spine": "^3.1.2",
     "pixi.js": "^6.5.10",
