--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "build": "npm run vite:build && npm run electron:build"
   },
   "dependencies": {
-    "gsap": "^3.12.4",
     "fs-extra": "^11.2.0",
+    "gsap": "^3.12.4",
+    "mime": "^2.6.0",
     "pinia": "^2.1.7",
     "pixi-spine": "^3.1.2",
     "pixi.js": "^6.5.10",
+    "tga2png": "^0.1.3",
     "vue": "^3.4.15",
     "vue-i18n": "^10.0.4"
   },
